syntax = "proto3";

package speedtest;
option go_package = "github.com/ebagos/speed_test/grpc/SpeedTest";

service SpeedTest {
  rpc Upload (stream UploadRequest) returns (UploadResponse) {}
  rpc Download (DownloadRequest) returns (stream DownloadResponse) {}
}

message UploadRequest {
  bytes data = 1;
}

message UploadResponse {
  int64 bytes = 1;
}

message DownloadRequest {
  int64 bytes = 1;
}

message DownloadResponse {
  bytes data = 1;
}
